# ai-kit

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
cli/: ai-kit.sh
commands/: ai-kit.md
plugins/doc-export/.claude-plugin/: plugin.json
plugins/doc-export/commands/: export-config.md
plugins/doc-export/hooks/: hooks.json
plugins/doc-export/scripts/: export-doc.sh
plugins/test-generator/.claude-plugin/: plugin.json
plugins/test-generator/commands/: test-generator.md
plugins/test-generator/skills/: test-generator.md
registry/: index.json
src/ai_kit/: cli.py
src/ai_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
