[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-kit"
version = "0.1.0"
description = "Claude Code Marketplace CLI"
readme = "README.md"
authors = [
  { name = "dan1901", email = "dan1901@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "setuptools",
]

[project.scripts]
ai-kit = "ai_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_kit = ["registry/**/*", "plugins/**/*"]
